# speedtest

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  flake.nix  run.sh  shell.nix
.github/workflows/: image.yml
src/: alert.rs  args.rs  macros.rs  mail.rs  main.rs  run.rs
