# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "trackspeedtest"
version = "0.2.0"
authors = ["Giovanni Bassi <giggio@giggio.net>"]
edition = "2018"
# package

[features]
static = []

[profile.release]
lto = true

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
csv = "1.1.6"
derivative = "2.2.0"
lettre = "0.9.6"
lettre_email = "0.9.4"
native-tls = "0.2.7"
openssl = { version = "0.10.34", features = ["vendored"] }
rev_lines = "0.2.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_yaml = "0.8.17"
which = "4.1.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
