# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "trackspeedtest"
version = "0.3.2"
authors = ["Giovanni Bassi <giggio@giggio.net>"]
edition = "2021"
exclude = [
    "Dockerfile",
    ".*",
    "data/",
    "target/",
    "Makefile",
    ".vscode/",
    "github/",
]

[profile.release]
lto = true
strip = "symbols"

[dependencies]
chrono = "0.4.19"
clap = "2.x"
csv = "1.1.6"
derivative = "2.2.0"
lettre = { version = "0.10.0-rc.7", features = ["rustls-tls"] }
lettre_email = "0.9.4"
openssl = { version = "0.10.34", features = ["vendored"] }
rev_lines = "0.2.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
which = "4.1.0"

[dev-dependencies]
pretty_assertions = "1.2.1"
