# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "trackspeedtest"
version = "0.4.0"
authors = ["Giovanni Bassi <giggio@giggio.net>"]
edition = "2021"
exclude = [
    "Dockerfile",
    ".*",
    "data/",
    "target/",
    "Makefile",
    ".vscode/",
    "github/",
]

[profile.release]
lto = true
strip = "symbols"

[dependencies]
chrono = "0.4.38"
clap = "2.*"
csv = "1.3.1"
derivative = "2.2.0"
lettre = { version = "0.10.4", features = ["rustls-tls"] }
lettre_email = "0.9.4"
openssl = { version = "0.10.68", features = ["vendored"] }
rev_lines = "0.2.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
which = "7.0.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
